test/good/SuperEq.hs
module SuperEq where

check :: (Ord a) => a -> a -> Bool
check a b = a == b
